Fixed app bar overflow bug

--- a/docs/style.css
+++ b/docs/style.css
@@ -1,5 +1,5 @@
 .app-bar__top {
-  height: 56px;
+  min-height: 56px;
   padding: 16px;
   display: grid;
   grid-template-columns: 1fr auto;
